# Detection-System

./: .env  .gitignore  .watchmanconfig  LICENSE  NOTICE  Python 3.12 (64-bit).lnk  README.md  app.py  from pydub import AudioSegment.py  mock.py  package-lock.json  package.json  requirements.txt
DeerSafeApp/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
DeerSafeApp/components/: AlertList.tsx  MapComponent.tsx  Navbar.tsx  NotificationBanner.tsx  ProximityCheck.ts  Push.tsx  UserLocation.tsx  styles.ts
DeerSafeApp/src/: apiClient.ts
backend/: app.py  requirements.txt
backend/models/: models.py
backend/routes/: alert_routes.py  location_routes.py  proximity_routes.py
backend/services/: alert_services.py  location_services.py
backend/utils/: file_utils.py
deersafe/: README.md  pubspec.yaml
deersafe/.dart_tool/: package_config.json  package_config_subset
env/: pyvenv.cfg
flutter_app/: pubspec.yaml
migrations/: env.py
sensor_scripts/DeerProject/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DeerProject  Makefile  cmake_install.cmake
sensor_scripts/DeerProject/include/: gps.h  pulse.h  read_sensors.h
sensor_scripts/DeerProject/lib/pigpio-master/: Makefile  cmake_install.cmake  pigpioTargets.cmake
sensor_scripts/DeerProject/src/: gps.c  init.c  pulse.c  read_sensors.c
server/: model.py
src/: __init__.py  app.py  config.py  firebase-adminsdk.json  grapql_app.py  pi-test.py  schema.py  send_data.py  sensor_check.py
templates/: index.html
tests/: camera-test.py  mock.py  sql-test.py  test.py
(+70 files in other folders)
